--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start",
-    "post-update": "echo \"codesandbox preview only, need an update\" && yarn upgrade --latest",
-    "postbuild": "node scripts/sitemap.js"
+    "start": "next start -p $PORT",
+    "postbuild": "node scripts/sitemap.js",
+    "heroku-postbuild": "npm run build"
   }
 }
